tpachat-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tpachat
  labels:
    app: tpachat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tpachat
  template:
    metadata:
      labels:
        app: tpachat
    spec:
      containers:
        - image: maammar/tpachato:18
          name: tpachat        
          ports:
          - containerPort: 8089 
      imagePullSecrets:
      - name: regcred
